--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -860,8 +860,10 @@
                                                     </div>
                                                 </td>
 
+                                                item.type = 555;
+
                                                 <td>
-                                                    <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowPerformance(performance)">
+                                                    <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeDescription(item)">
                                                         <span class="glyphicon glyphicon-minus"></span>
                                                     </button>
                                                 </td>
