--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -863,7 +863,7 @@
                                                 item.type = 555;
 
                                                 <td>
-                                                    <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeDescription(item)">
+                                                    <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowDescription(item)">
                                                         <span class="glyphicon glyphicon-minus"></span>
                                                     </button>
                                                 </td>
@@ -873,7 +873,7 @@
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div class="col-md-1 pull-left">
-                                                    <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowPerformance()">
+                                                    <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription()">
                                                         Add company
                                                     </button>
                                                 </div>
