--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -874,7 +874,7 @@
                                             <div class="col-md-12">
                                                 <div class="col-md-1 pull-left">
                                                     <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription()">
-                                                        Add company
+                                                        Add description
                                                     </button>
                                                 </div>
                                                 <div class="pull-right">
