--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -845,26 +845,28 @@
                                                 <th>GP Merits</th>
                                                 <th></th>
                                             </tr>
-                                            <tr *ngFor="let item of fund.onePagerDescriptions where item.type === 1">
-                                                <td>
-                                                    <input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>
-                                                    <div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">
-                                                        Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
-                                                    </div>
-                                                </td>
+                                            <tr *ngFor="let item of fund.onePagerDescriptions">
+                                                <div [hidden]="item.type !=1">
+                                                    <td>
+                                                        <input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>
+                                                        <div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">
+                                                            Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                        </div>
+                                                    </td>
 
-                                                <td>
-                                                    <input type="text" class="form-control" name="description" [(ngModel)]="item.description" placeholder="-" #description="ngModel"/>
-                                                    <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
-                                                        Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
-                                                    </div>
-                                                </td>
+                                                    <td>
+                                                        <input type="text" class="form-control" name="description" [(ngModel)]="item.description" placeholder="-" #description="ngModel"/>
+                                                        <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
+                                                            Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                        </div>
+                                                    </td>
 
-                                                <td>
-                                                    <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowDescription(item)">
-                                                        <span class="glyphicon glyphicon-minus"></span>
-                                                    </button>
-                                                </td>
+                                                    <td>
+                                                        <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowDescription(item)">
+                                                            <span class="glyphicon glyphicon-minus"></span>
+                                                        </button>
+                                                    </td>
+                                                </div>
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(1)">
@@ -879,26 +881,28 @@
                                                 <th>GP Risks</th>
                                                 <th></th>
                                             </tr>
-                                            <tr *ngFor="let item of fund.onePagerDescriptions where item.type === 2">
-                                                <td>
-                                                    <input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>
-                                                    <div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">
-                                                        Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
-                                                    </div>
-                                                </td>
+                                            <tr *ngFor="let item of fund.onePagerDescriptions">
+                                                <div [hidden]="item.type !=2">
+                                                    <td>
+                                                        <input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>
+                                                        <div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">
+                                                            Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                        </div>
+                                                    </td>
 
-                                                <td>
-                                                    <input type="text" class="form-control" name="description" [(ngModel)]="item.description" placeholder="-" #description="ngModel"/>
-                                                    <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
-                                                        Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
-                                                    </div>
-                                                </td>
+                                                    <td>
+                                                        <input type="text" class="form-control" name="description" [(ngModel)]="item.description" placeholder="-" #description="ngModel"/>
+                                                        <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
+                                                            Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                        </div>
+                                                    </td>
 
-                                                <td>
-                                                    <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowDescription(item)">
-                                                        <span class="glyphicon glyphicon-minus"></span>
-                                                    </button>
-                                                </td>
+                                                    <td>
+                                                        <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowDescription(item)">
+                                                            <span class="glyphicon glyphicon-minus"></span>
+                                                        </button>
+                                                    </td>
+                                                </div>
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(2)">
