--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -868,7 +868,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(1)">
-                                                    Add description
+                                                    Add GP Merit
                                                 </button>
                                             </div>
                                         </table>
@@ -902,7 +902,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(2)">
-                                                    Add description
+                                                    Add GP Risk
                                                 </button>
                                             </div>
                                         </table>
@@ -936,7 +936,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(3)">
-                                                    Add description
+                                                    Add Strategy/Structure Merit
                                                 </button>
                                             </div>
                                         </table>
@@ -970,7 +970,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(4)">
-                                                    Add description
+                                                    Add Strategy/Structure Risk
                                                 </button>
                                             </div>
                                         </table>
@@ -1004,7 +1004,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(5)">
-                                                    Add description
+                                                    Add Performance Merit
                                                 </button>
                                             </div>
                                         </table>
@@ -1038,7 +1038,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(6)">
-                                                    Add description
+                                                    Add Performance Risk
                                                 </button>
                                             </div>
                                         </table>
@@ -1072,7 +1072,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(7)">
-                                                    Add description
+                                                    Add Fund Strategy
                                                 </button>
                                             </div>
                                         </table>
@@ -1106,7 +1106,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(8)">
-                                                    Add description
+                                                    Add Descriptive Data
                                                 </button>
                                             </div>
                                         </table>
@@ -1140,7 +1140,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(9)">
-                                                    Add description
+                                                    Add Targeted Closing Information
                                                 </button>
                                             </div>
                                         </table>
