--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -841,6 +841,13 @@
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
+                                                <th>Investments Performance Data as of</th>
+                                                <th><input type="text" class="form-control" name="asOfDate" [(ngModel)]="asOfDate" placeholder="-" #asOfDate="ngModel"/></th>
+                                            </tr>
+                                        </table>
+                                        <br>
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                            <tr>
                                                 <th>GP Merits (bold part)</th>
                                                 <th>GP Merits</th>
                                                 <th></th>
