--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -842,7 +842,9 @@
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
                                                 <th>Investments Performance Data as of</th>
-                                                <th><input type="text" class="form-control" name="asOfDate" [(ngModel)]="asOfDate" placeholder="-" #asOfDate="ngModel"/></th>
+                                                <th>
+                                                    <input type="text" class="form-control" name="onePagerAsOfDate" [(ngModel)]="onePagerAsOfDate" placeholder="-"/>
+                                                </th>
                                             </tr>
                                         </table>
                                         <br>
