--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -839,14 +839,10 @@
                                             <!--</form>-->
                                         <!--</div>-->
                                         <br>
-                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
-                                            <tr>
-                                                <th>Investments Performance Data as of</th>
-                                                <th>
-                                                    <input type="text" class="form-control" name="onePagerAsOfDate" [(ngModel)]="onePagerAsOfDate" placeholder="-"/>
-                                                </th>
-                                            </tr>
-                                        </table>
+                                        <div class="col-md-12">
+                                            <div class="col-md-3"><b>Investments Performance Data as of</b></div>
+                                            <div class="col-md-2"><input type="text" class="form-control" id="onePagerAsOfDate" name="onePagerAsOfDate" [(ngModel)]="fund.onePagerAsOfDate"/></div>
+                                        </div>
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
