--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -828,7 +828,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="pull-right">
-                                            <button type="submit" class="btn btn-success" (click)="createOnePager()" [disabled]="fund.id == 0 || fund.id == null">CREATE</button>
+                                            <button type="submit" class="btn btn-success" (click)="saveDataAndCreateOnePager()" [disabled]="fund.id == 0 || fund.id == null">CREATE</button>
                                         </div>
                                         <!--<div class="pull-left">-->
                                             <!--<form>-->
@@ -1266,7 +1266,7 @@
                                         </table>
 
                                         <div class="pull-right">
-                                            <button type="submit" class="btn btn-success" (click)="createOnePager()" [disabled]="fund.id == 0 || fund.id == null">CREATE</button>
+                                            <button type="submit" class="btn btn-success" (click)="saveDataAndCreateOnePager()" [disabled]="fund.id == 0 || fund.id == null">CREATE</button>
                                         </div>
                                     </div>
                                 </div>
